--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,23 +1,18 @@
 <view id='order'>
-  <!-- <form bindsubmit="getFormId" report-submit="true"> -->
-    <!-- <button form-type="submit" class='stickyClass'> -->
-      <view class='tabBar stickyClass'>
-        <view class="tab-item {{currentTab == 0 ? 'active' : ''}}" bindtap='clickMenu' data-current="0" data-status=''>全部</view>
-        <view class="tab-item {{currentTab == 1 ? 'active' : ''}}" bindtap='clickMenu' data-current="1" data-status='0'>待付款</view>
-        <view class="tab-item {{currentTab == 2 ? 'active' : ''}}" bindtap='clickMenu' data-current="2" data-status='1'>待收货</view>
-        <view class="tab-item {{currentTab == 3 ? 'active' : ''}}" bindtap='clickMenu' data-current="3" data-status='2'>待评论</view>
-        <view class="tab-item {{currentTab == 4 ? 'active' : ''}}" bindtap='clickMenu' data-current="4" data-status='3'>退款/售后</view>
-      </view>
-    <!-- </button> -->
-  <!-- </form> -->
+  <view class='tabBar stickyClass'>
+    <view class="tab-item {{currentTab == 0 ? 'active' : ''}}" bindtap='clickMenu' data-current="0" data-status='' >全部</view>
+    <view class="tab-item {{currentTab == 1 ? 'active' : ''}}" bindtap='clickMenu' data-current="1" data-status='0'>待付款</view>
+    <view class="tab-item {{currentTab == 2 ? 'active' : ''}}" bindtap='clickMenu' data-current="2" data-status='1'>待收货</view>
+    <view class="tab-item {{currentTab == 3 ? 'active' : ''}}" bindtap='clickMenu' data-current="3" data-status='2'>待评论</view>
+    <view class="tab-item {{currentTab == 4 ? 'active' : ''}}" bindtap='clickMenu' data-current="4" data-status='3'>退款/售后</view>
+  </view>
 
-  <view class='orderList' bindtap='toOrderDetail' data-orderid='{{item.orderId}}' wx:for="{{orderList}}"   wx:key="key">
+
+  <view class='orderList' bindtap='toOrderDetail' data-orderid='{{item.orderId}}' wx:for="{{orderList}}" wx:key="key">
     <view class='order-head'>
-      <!-- <image class='order-head-img' mode='aspectFill' src='../images/tianjia.png'></image> -->
       <view class='order-head-mes'>
         <view class='order-head-nickname'>{{item.shopName}}</view>
       </view>
-      <!-- <view class='order-head-goodsWay'>{{item.gty}}</view> -->
     </view>
     <view class='order-mes'>
       <image class='order-mes-img' src='{{item.gimage}}' data-img='{{item}}' mode='aspectFill' wx:key="key"></image>
@@ -30,24 +25,18 @@
     <view class='orderTotalPrice'>
       <view class='orderTotalPrice-text'>合计：￥{{item.sum}}</view>
     </view>
+  <view class='orderBtn'>
+    <view class='order-all'>
+      <view class='btn-cancelOrder' wx:if="{{item.logistics == 0}}" data-orderid='{{item.orderId}}' catchtap='cancelOrder'>取消订单</view>
+       <view class='btn-pay' wx:if="{{item.state == 1 && item.logistics == 0 }}" catchtap='toPay' data-price='{{item.price}}' data-orderid='{{item.orderId}}'>付款</view>
+         <view class='btn-stay' wx:if="{{item.state == 1 && item.logistics == 1 }}"catchtap='toView'>确认收货</view>
+     <view class='btn-pingjia' wx:if="{{item.state == 2&& item.logistics == 1}}" data-orderid='{{item.orderId}}' catchtap='toView'>评价</view>
+     <view class='btn-refund' wx:if="{{item.state == 3 && item.logistics == 1 }}"
+        catchtap='refundOrder'>申请退款</view>
   </view>
-  <modal hidden="{{hiddenRefund}}" title="申请退款" confirm-text="提交" cancel-text="取消" bindcancel="cancelRefund" bindconfirm="confirmRefund">
-    <input type='text' class='input-refund' bindinput='input_refund' value='{{input_refund}}' placeholder="请输入退款原因" />
-  </modal><view class='orderBtn'>
-      <view class='order-all'>
-        <view class='btn-cancelOrder' wx:if="{{item.orderState == 0}}" data-orderid='{{item.orderId}}' catchtap='cancelOrder'>取消订单</view>
-        <view class='btn-pay' wx:if="{{item.orderState == 0}}" catchtap='toPay' data-price='{{item.orderPrice}}' data-orderid='{{item.orderId}}'>去付款</view>
-        <view class='btn-stay' wx:if="{{item.orderState == 1 && item.logistics == 0 }}">等待卖家发货</view>
-        <view class='btn-refund' wx:if="{{item.orderState == 1 && item.logistics == 0 }}" catchtap='refundOrder' data-orderid='{{item.orderId}}'>申请退款</view>
-        <view class='btn-refund' wx:if="{{item.orderState == 3 && item.logistics == 0 }}">申请退款中</view>
-        <view class='btn-finish' wx:if="{{item.orderState == 2}}">订单已完成</view>
-        <view class='btn-confirm' wx:if="{{item.orderState == 1 && item.logistics == 1 }}" catchtap='confirmOrder' data-sellerid='{{item.sellerId}}' data-orderid='{{item.orderId}}' data-goodsname='{{item.goodsTitle}}' data-orderprice='{{item.orderPrice}}'>确认收货</view>
-        <view class='btn-refund' wx:if="{{item.orderState == 3 && item.logistics == 1 }}">申请退款中</view>
-      </view>
-
-   
+    </view>
   </view>
-  <modal hidden="{{hiddenRefund}}" title="申请退款" confirm-text="提交" cancel-text="取消" bindcancel="cancelRefund" bindconfirm="confirmRefund">
+  <modal hidden="{{true}}" title="申请退款" confirm-text="提交" cancel-text="取消" bindcancel="cancelRefund" bindconfirm="confirmRefund">
     <input type='text' class='input-refund' bindinput='input_refund' value='{{input_refund}}' placeholder="请输入退款原因" />
   </modal>
 </view>
