--- a/pages/xiangqing/xiangqing.wxml
+++ b/pages/xiangqing/xiangqing.wxml
@@ -1,8 +1,4 @@
 <view class='xiangqing-page'>
-  <view>
-
-    <image src="../../images/rotating.png" class="img-plus-style" animation="{{animPlus}}" bindtap="torelease" id="{{fid}}"></image>
-  </view>
   <view class='current'>
     <view class='user-info'>
       <view class='touxiang'>
@@ -20,7 +16,7 @@
     </view>
     <view class='user-content'>
       <view class='con'>
-        <text>{{content}}</text>
+        <text>{{content1}}</text>
       </view>
     </view>
     <view class='pinglun'>
@@ -36,8 +32,13 @@
       <view class='font'>全部回复</view>
       <view class='num'>{{number}}</view>
     </view>
+    <view class='liuyan-ban'>
+
+      <input class='comment-input' placeholder="{{placeholder}}" bindinput='comment_input' value='{{nul}}' focus='{{focus}}'></input>
+      <view class='comment-send' bindtap='comment_send' id="{{fid}}">发送</view>
+    </view>
     <view class='huifu-content'>
-      <view class='current2' bindtap='zihuifu' id="{{zhuItem.id}}" wx:for="{{huifu}}" wx:key="*this" wx:for-item="zhuItem">
+      <view class='current2' bindtap='zihuifu' id="{{zhuItem.id}}" data-name="{{zhuItem.name}}" wx:for="{{huifu}}" wx:key="*this" wx:for-item="zhuItem">
         <view class='user-info'>
           <view class='touxiang2'>
             <image src='{{zhuItem.headimgurl}}'></image>
@@ -48,7 +49,7 @@
             </view>
             <view class='bot'>
               <view class='time' decode="true">{{zhuItem.year}} {{zhuItem.day}} {{zhuItem.minute}}</view>
-      
+
             </view>
           </view>
         </view>
@@ -56,27 +57,26 @@
           <view class='con'>
             <text>{{zhuItem.comment}}</text>
             <view class='xiaohuifu'>
-             
-                <view class='son' wx:for="{{zhuItem.item}}" wx:key="*this">
-                  <view class='son-con'>
-                    <view class='name'>{{item.name}}:</view>
-                    <view class='son-content'>{{item.comment}}</view>
-                    
-                  </view>
-                  
-                  
-            
-          
-             
+
+              <view class='son'  catchtap='zihuifu2' id="{{item.id}}" data-sid="{{item.commentId}}"  data-name="{{item.name}}" wx:for="{{zhuItem.item}}"  wx:key="*this">
+                <view class='son-con'>
+                <view class='zi-name'>{{item.name}}</view>  <view class='son-content'>{{maohao}}{{item.comment}}</view>
+
+                </view>
+
+
+
+
+
               </view>
-              <view class='quanbu' wx:if="{{zhuItem.num> 0}}"><view>查看全部{{zhuItem.num}}条评论</view></view>
+
 
             </view>
           </view>
         </view>
         <view class='pinglun'>
           <view class='p-con'>
-            <view class='p-pl'>查看详情</view>
+            <view class='p-pl'></view>
           </view>
         </view>
       </view>
