--- a/pages/conminuity/conminuity.wxml
+++ b/pages/conminuity/conminuity.wxml
@@ -1,7 +1,7 @@
 <view class='com-page'>
   <view>
 
-    <image src="../../images/rotating.png" class="img-plus-style" animation="{{animPlus}}" bindtap="torelease"></image>
+    <image src="../../images/rotating.png" class="img-plus-style" bindtap="torelease"></image>
   </view>
   <view class='guanggao'>
     <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}">
@@ -12,86 +12,72 @@
       </block>
     </swiper>
   </view>
-
-  <view class="swiper-tab">
-    <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">最新</view>
-    <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">热门</view>
-  </view>
-  <swiper current="{{currentTab}}" duration="300" bindchange="swiperTab" style='height:{{h}}rpx;' circular='true'>
-
-    <swiper-item>
-      <view class='current' wx:for="{{tiezi}}" wx:key="*this" id="{{item.id}}" bindtap='detailPage' >
-        <view class='user-info'>
-          <view class='touxiang'><image src='{{item.titlePic}}'></image></view>
-          <view class='nicheng'>
-            <view class='top'><view>{{item.name}}</view></view>
-            <view class='bot'> <view class='time' decode="true">{{item.year}} {{item.day}} {{item.minute}}</view> <view class='liulanliang'>浏览次数：{{item.brow}}</view></view>
-           
-          </view>
-         
+  <view class='huati'>
+    <view class='huati-title'>
+      <view class='title-con'>
+        <view class='left'>
+          <view>推荐的话题</view>
         </view>
-        <view class='user-content'>
-          <view class='con'>
-            <text>{{item.content}}</text>
+        <view class='right' bindtap='allhuati'>
+          <view>全部</view>
+          <view class='iconfont icon-youjiantou'></view>
+        </view>
+      </view>
+    </view>
+    <view class='huati-content'>
+      <view class='two-con'>
+        <view class='con1' bindtap='huaticon'>
+          <view class='img'><image src='{{url1}}'></image></view>
+          <view class='font'>
+            <view class='kuang'>
+              <view class='font-title'>谢霆锋否认恋情...</view>
+              <view class='font-neirong'>近日，网传谢霆锋...</view>
+            </view>
           </view>
         </view>
-        <view class='pinglun'>
-          <view class='p-con'>
-     <view class='p-number'>查看详情</view>
+        <view class='con1' bindtap='huaticon'>
+          <view class='img'><image src='{{url2}}'></image></view>
+          <view class='font'>
+            <view class='kuang'>
+              <view class='font-title'>古风言情小说脑部男主...</view>
+              <view class='font-neirong'>这组图的白敬亭是...</view>
+            </view>
           </view>
         </view>
       </view>
-      
-    </swiper-item>
-    <swiper-item>
-      <view class='current' wx:for="{{tiezi2}}" wx:key="*this" bindtap='detailPage' >
-        <view class='user-info'>
-          <view class='touxiang'><image src='{{item.titlePic}}'></image></view>
-          <view class='nicheng'>
-            <view class='top'><view>{{item.name}}</view></view>
-            <view class='bot'> <view class='time' decode="true">{{item.year}} {{item.day}} {{item.minute}}</view> <view class='liulanliang'>浏览次数：{{item.brow}}</view></view>
-           
-          </view>
-        </view>
-        <view class='user-content'>
-          <view class='con'>
-            <text>{{item.content}}</text>
-          </view>
+    </view>
+  </view>
+  <view class='zhiding'>
+    <view class='zd'>
+      <view>置顶</view>
+    </view>
+    <view class='zd-title'>社区发帖及回复规范</view>
+  </view>
+  <view class='all-tiezi'>
+    <view class='tiezi' wx:for="{{tiezi}}" wx:key="*this" id="{{item.id}}" bindtap='detailPage'>
+      <view class='tiezi-tit'>
+        <view class='tit-font'><view class='biaoti'>{{item.title}}</view></view>
+      </view>
+      <view class='tiezi-con'>
+        <view class='con-neirong'><text>{{space}}{{space}}{{item.content}}</text></view>
+      </view>
+      <view class='tiezi-bottom'>
+        <view class='user'>
+          <view class='name'>
+         {{item.name}}</view>
+          <view class='info'>发布于</view>
+          <view class='info'>{{item.year}}{{item.day}}{{item.minute}}</view>
         </view>
         <view class='pinglun'>
-          <view class='p-con'>
-          <view class='p-number'>查看详情</view>
-          </view>
+          <view class='iconfont icon-liulan'></view>
+          <view class='num'><view>{{item.brow}}</view></view>
         </view>
       </view>
-    </swiper-item>
-  </swiper>
-<view wx:if="{{flag==true}}" class='Bottom'>没有更多数据了！</view>
+    </view>
 
-  <!-- <view class="swiper-tab">
-    <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">最新</view>
-    <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">热门</view>
   </view>
- <view class='content'>
 
- <view class='quyu'>
-  <scroll-view scroll-x="true" class='hua1'>
- <view class='new'></view>
-  <view class='hot'></view>
-    </scroll-view>
- </view>
-
- </view> -->
-  <!-- <scroll-view scroll-y="true" class='tiezi'>
-   <view class='tiezi-all'>
-  <view class='cont1'></view>
-   <view class='cont1'></view>
-    <view class='cont1'></view>
-     <view class='cont1'></view>
-      <view class='cont1'></view>
-       <view class='cont1'></view>
-         </view>
-  </scroll-view> -->
+  <view wx:if="{{flag==true}}" class='Bottom'>没有更多数据了！</view>
 
 
 
