--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -22,7 +22,33 @@
       <view class='index-body'>
         <view class='index-body-icon'>
           <view class='index-body-icon-bg'>
-            <view class='index-body-icon-bg-content' bindtap='vote' id="水果超市">
+          <view class='fangkuai1' bindtap='vote' id="蔬菜农场">
+          <view class='secondfk1'>
+          <view class='f-cont'>
+           <image src="/images/shucai.png"></image>
+           <view>蔬菜</view>
+           </view>
+          </view>
+          </view>
+           <view class='fangkuai2' bindtap='vote' id="水果超市">  <view class='secondfk2'>
+               <view class='f-cont'>
+           <image src="/images/shengxian.png"></image>
+           <view>鲜蔬</view>
+           </view>
+           </view></view>
+            <view class='fangkuai3' bindtap='vote' id="学农商品">  <view class='secondfk3'>
+                <view class='f-cont'>
+           <image src="/images/jiaoyu.png"></image>
+           <view>学农</view>
+           </view>
+            </view></view>
+             <view class='fangkuai4' bindtap='vote' id="旅游产业">  <view class='secondfk4'>
+                 <view class='f-cont'>
+           <image src="/images/lyou.png"></image>
+           <view>旅游</view>
+           </view>
+             </view></view>
+            <!-- <view class='index-body-icon-bg-content' bindtap='vote' id="水果超市">
               <view class='index-body-icon-bg-content-icon'>
                 <view class='index-body-icon-bg-content-icon-border'>
                   <image src='/images/fruit.png'></image>
@@ -86,13 +112,16 @@
                 </view>
               </view>
               <view class='index-body-icon-bg-content-text'>其他</view>
-            </view>
+            </view> -->
           </view>
         </view>
-        <view class='location-all' bindtap='tolocation' >
+        <view class='location-all' >
+        <view class='loca' bindtap='tolocation' >
           <image style='margin-left: 10px;' src='/images/location.png'></image>
           <view class='content'>{{location}}</view>
           <image src='/images/right2.png'></image>
+          </view>
+          <view class="more"><view>更多商家</view></view>
         </view>
         <view class='tuijian'>
           <view class='tuijian-title'>为你精选</view>
@@ -120,6 +149,8 @@
         </view>
         <view class='fujin'>
           <view class='fujin-title'>附近商家</view>
+ 
+
           <view class='fujin-allpaixu'>
             <view class='fujin-pauxu'>
               <view bindtap='xiaoliangpx' class='xiaoliang' style="color:{{color1}};">
@@ -132,7 +163,7 @@
                 <text>评价好</text>
               </view>
             </view>
-          </view>
+          </view> 
           <view class='fujin-content'>
               <view class='cont1' wx:for="{{fujinlist}}" wx:key="*this" bindtap='dianjia' id="{{item.id}}">
             <view class='sj-logo'>
