--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -24,12 +24,24 @@
   height: 60rpx;
   font-size: 10px;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   color: black;
   text-align: center;
   border-bottom: 1px solid rgba(0,0,0, 0.05);
   /* background: #ef696c; */
+}
+.loca{
+  width: 80%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.more{
+  width: 20%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .location-all image{
   width: 30rpx;
@@ -48,7 +60,7 @@
 .search{
   width: 100%;
   height: 50rpx;
-  background: #44960E;
+  background: #67CB33;
   padding-top: 15rpx;
   padding-bottom:15rpx;
 }
@@ -157,6 +169,87 @@ height:100%;
   font-size: 8px;
   color: rgba(0, 0,0,0.5);
 }
+.fangkuai1{
+  width: 170rpx;
+  height: 170rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(243, 212, 194);
+}
+.fangkuai2{
+   width: 170rpx;
+  height: 170rpx;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(225 ,242, 184);
+}
+.fangkuai3{
+  width: 170rpx;
+  height: 170rpx;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(204 ,239, 234);
+}
+.fangkuai4{
+  width: 170rpx;
+  height: 170rpx;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(216 ,208 ,245);
+}
+.secondfk1{
+  width: 88%;
+  height: 88%;
+  color: white;
+  background: rgb(238, 141 ,70);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.f-cont{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+    font-size: 30rpx;
+}
+.f-cont image{
+   width: 70rpx;
+  height: 70rpx;
+
+}
+.secondfk2{
+   width: 88%;
+  height: 88%;
+  background: rgb(179 ,213 ,101);
+  color: white;
+    display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.secondfk3{
+  width: 88%;
+  height: 88%;
+   color: white;
+  background: rgb(102, 212 ,185);
+    display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.secondfk4{
+  width: 88%;
+  height: 88%;
+   color: white;
+  background: rgb(175 ,162 ,232);
+    display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .guanggao{
   margin-top: 5px;
   width: 100%;
@@ -251,8 +344,9 @@ align-items: center;
   font-size: 8px;
   display: flex;
 }
+
 .xy-left{
-  width: 50%;
+  width: 90%;
   display: flex;
 }
 .xy-right{
@@ -523,13 +617,14 @@ display: flex;
 justify-content: center;
 align-items: center;
 width: 750rpx;
-height: 287.5rpx;
+height: 241.5rpx;
 }
 .index-body-icon-bg{
   display: flex;
+  align-items: center;
   flex-wrap:wrap;
   justify-content: space-between;
-width: 640rpx;
+width: 95%;
 height: 230.5rpx;
 
 }
@@ -600,4 +695,4 @@ height: 230.5rpx;
   font-size: 24rpx;
   color: #959595;
 }
-
+/* 下啦 */
