--- a/pages/Mall/Mall.wxss
+++ b/pages/Mall/Mall.wxss
@@ -104,6 +104,7 @@ align-items: center;
   width: 100%;
   height: 100%;
   border-radius: 4px;
+   border: 1px solid rgba(0,0,0, 0.3);
 }
 .sj-info{
   width: 65%;
